Fixed typo in Environment Enabled warnings and deprecations in pom.xml Removed deprecated code when creating health checks